Save with GB18030

--- a/Langs/0804.lang
+++ b/Langs/0804.lang
@@ -3,57 +3,57 @@ Language=Chinese (Simplified) - China
 Translator=BluesDawn (@BluesDawn576)
 Version=2.2.5.0
 [Strings]
-Donate=æ‰“èµ
-Check for Updates=æ£€æŸ¥æ›´æ–°
-Your Windows 11 Compatibility Results are Below=æ­¤è®¾å¤‡ Windows 11 å…¼å®¹æ€§æ£€æµ‹ç»“æœå¦‚ä¸‹
-Now Reach WhyNotWin11 via https://www.whynotwin11.org/=ç°åœ¨å¯ä»¥é€šè¿‡ https://www.whynotwin11.org/ è®¿é—® WhyNotWin11
-Results Based on Currently Known Requirements!=åŸºäºå½“å‰å·²çŸ¥é…ç½®è¦æ±‚å¾—å‡ºï¼Œç»“æœä»…ä¾›å‚è€ƒï¼
-Translation by=ç¿»è¯‘ï¼š
-Architecture (CPU + OS)=æ¶æ„ (CPU + OS)
-Boot Method=å¼•å¯¼æ–¹å¼
-CPU Compatibility=CPU å…¼å®¹æ€§
-CPU Core Count=CPU æ ¸å¿ƒæ•°
-CPU Frequency=CPU é¢‘ç‡
+Donate=´òÉÍ
+Check for Updates=¼ì²é¸üĞÂ
+Your Windows 11 Compatibility Results are Below=´ËÉè±¸ Windows 11 ¼æÈİĞÔ¼ì²â½á¹ûÈçÏÂ
+Now Reach WhyNotWin11 via https://www.whynotwin11.org/=ÏÖÔÚ¿ÉÒÔÍ¨¹ı https://www.whynotwin11.org/ ·ÃÎÊ WhyNotWin11
+Results Based on Currently Known Requirements!=»ùÓÚµ±Ç°ÒÑÖªÅäÖÃÒªÇóµÃ³ö£¬½á¹û½ö¹©²Î¿¼£¡
+Translation by=·­Òë£º
+Architecture (CPU + OS)=¼Ü¹¹ (CPU + OS)
+Boot Method=Òıµ¼·½Ê½
+CPU Compatibility=CPU ¼æÈİĞÔ
+CPU Core Count=CPU ºËĞÄÊı
+CPU Frequency=CPU ÆµÂÊ
 DirectX + WDDM2=DirectX + WDDM2
-Disk Partition Type=ç¡¬ç›˜åˆ†åŒºç±»å‹
-RAM Installed=å†…å­˜å¤§å°
-Secure Boot=å®‰å…¨å¼•å¯¼ (Secure Boot)
-Storage Available=å­˜å‚¨ç©ºé—´
-TPM Version=TPM ç‰ˆæœ¬
-Checking...=æ£€æµ‹ä¸­...
-64 Bit CPU=64ä½ CPU
-64 Bit OS=64ä½ OS
-32 Bit CPU=32ä½ CPU
-32 Bit OS=32ä½ OS
-Unable to Determine=æ— æ³•ç¡®å®š
-Unable to Check List=æ— æ³•éªŒè¯
-Error Accessing List=è®¿é—®åˆ—è¡¨æ—¶å‡ºé”™
-Not Currently Listed as Compatible=æœªåˆ—ä¸ºå…¼å®¹
-Listed as Compatible=å·²åˆ—ä¸ºå…¼å®¹
-Cores=æ ¸
-Threads=çº¿ç¨‹
-GPT Detected=æ£€æµ‹åˆ° GPT
-GPT Not Detected=æœªæ£€æµ‹åˆ° GPT
-Enabled=å·²å¯ç”¨
-Supported=æ”¯æŒ
-Disabled / Not Detected=å·²ç¦ç”¨ / æœªæ£€æµ‹åˆ°
-Drive(s) Meet Requirements=ä¸ªé©±åŠ¨å™¨æ»¡è¶³è¦æ±‚
-TPM Missing / Disabled=TPM ç¼ºå¤± / å·²ç¦ç”¨
-Not Supported=ä¸æ”¯æŒ
-Detected=å·²è¢«æ£€æµ‹åˆ°
-DirectX 12 and WDDM 3=æ”¯æŒ DirectX 12 ä¸ WDDM 3
-DirectX 12 and WDDM 2=æ”¯æŒ DirectX 12 ä¸ WDDM 2
-No DirectX 12, but WDDM2=ä¸æ”¯æŒ DirectX 12ï¼Œä½†æ”¯æŒ WDDM2
-DirectX 12, but no WDDM2=æ”¯æŒ DirectX 12ï¼Œä½†ä¸æ”¯æŒ WDDM2
-No DirectX 12 or WDDM2=ä¸æ”¯æŒ DirectX 12 ä¸ WDDM2
-Test Build?=å¯èƒ½æ˜¯æµ‹è¯•ç‰ˆæœ¬
-You're running a newer build than publically Available!=ä½ å½“å‰è¿è¡Œçš„æ˜¯éå‘è¡Œç‰ˆæœ¬ï¼
-Up to Date=æœ€æ–°ç‰ˆæœ¬
-You're running the latest build!=ä½ å½“å‰è¿è¡Œçš„æ˜¯æœ€æ–°ç‰ˆæœ¬ï¼
-Unable to Check for Updates=æ— æ³•è·å–æ›´æ–°
-Unable to load release data.=æ— æ³•è·å–åˆ°å‘è¡Œç‰ˆæœ¬çš„æ•°æ®
-Invalid Data Received!=è·å–åˆ°æ— æ•ˆå†…å®¹ï¼
-Invalid Release Tags Received!=è·å–åˆ°æ— æ•ˆçš„æ ‡ç­¾å†…å®¹ï¼
-Invalid Release Types Received!=è·å–åˆ°æ— æ•ˆçš„å‘è¡Œç±»å‹ï¼
-Update Available=æœ‰æ–°çš„ç‰ˆæœ¬å¯ç”¨
-An Update is Available, would you like to download it?=æœ‰æ–°ç‰ˆæœ¬å¯ç”¨ï¼Œä½ ç°åœ¨è¦ä¸‹è½½å—ï¼Ÿ
+Disk Partition Type=Ó²ÅÌ·ÖÇøÀàĞÍ
+RAM Installed=ÄÚ´æ´óĞ¡
+Secure Boot=°²È«Òıµ¼ (Secure Boot)
+Storage Available=´æ´¢¿Õ¼ä
+TPM Version=TPM °æ±¾
+Checking...=¼ì²âÖĞ...
+64 Bit CPU=64Î» CPU
+64 Bit OS=64Î» OS
+32 Bit CPU=32Î» CPU
+32 Bit OS=32Î» OS
+Unable to Determine=ÎŞ·¨È·¶¨
+Unable to Check List=ÎŞ·¨ÑéÖ¤
+Error Accessing List=·ÃÎÊÁĞ±íÊ±³ö´í
+Not Currently Listed as Compatible=Î´ÁĞÎª¼æÈİ
+Listed as Compatible=ÒÑÁĞÎª¼æÈİ
+Cores=ºË
+Threads=Ïß³Ì
+GPT Detected=¼ì²âµ½ GPT
+GPT Not Detected=Î´¼ì²âµ½ GPT
+Enabled=ÒÑÆôÓÃ
+Supported=Ö§³Ö
+Disabled / Not Detected=ÒÑ½ûÓÃ / Î´¼ì²âµ½
+Drive(s) Meet Requirements=¸öÇı¶¯Æ÷Âú×ãÒªÇó
+TPM Missing / Disabled=TPM È±Ê§ / ÒÑ½ûÓÃ
+Not Supported=²»Ö§³Ö
+Detected=ÒÑ±»¼ì²âµ½
+DirectX 12 and WDDM 3=Ö§³Ö DirectX 12 Óë WDDM 3
+DirectX 12 and WDDM 2=Ö§³Ö DirectX 12 Óë WDDM 2
+No DirectX 12, but WDDM2=²»Ö§³Ö DirectX 12£¬µ«Ö§³Ö WDDM2
+DirectX 12, but no WDDM2=Ö§³Ö DirectX 12£¬µ«²»Ö§³Ö WDDM2
+No DirectX 12 or WDDM2=²»Ö§³Ö DirectX 12 Óë WDDM2
+Test Build?=¿ÉÄÜÊÇ²âÊÔ°æ±¾
+You're running a newer build than publically Available!=Äãµ±Ç°ÔËĞĞµÄÊÇ·Ç·¢ĞĞ°æ±¾£¡
+Up to Date=×îĞÂ°æ±¾
+You're running the latest build!=Äãµ±Ç°ÔËĞĞµÄÊÇ×îĞÂ°æ±¾£¡
+Unable to Check for Updates=ÎŞ·¨»ñÈ¡¸üĞÂ
+Unable to load release data.=ÎŞ·¨»ñÈ¡µ½·¢ĞĞ°æ±¾µÄÊı¾İ
+Invalid Data Received!=»ñÈ¡µ½ÎŞĞ§ÄÚÈİ£¡
+Invalid Release Tags Received!=»ñÈ¡µ½ÎŞĞ§µÄ±êÇ©ÄÚÈİ£¡
+Invalid Release Types Received!=»ñÈ¡µ½ÎŞĞ§µÄ·¢ĞĞÀàĞÍ£¡
+Update Available=ÓĞĞÂµÄ°æ±¾¿ÉÓÃ
+An Update is Available, would you like to download it?=ÓĞĞÂ°æ±¾¿ÉÓÃ£¬ÄãÏÖÔÚÒªÏÂÔØÂğ£¿
